Fix for rage/hunger colours on group sheets when the splats don't align

--- a/display/wod5e-styling.css
+++ b/display/wod5e-styling.css
@@ -1866,6 +1866,12 @@ body.uk .actor.sheet {
 .group.sheet .coterie-features .portilion {
   width: 200px;
 }
+.group.sheet .member-hunger.active {
+  background-color: var(--vampire-color-3) !important;
+}
+.group.sheet .member-rage.active {
+  background-color: var(--werewolf-color-2) !important;
+}
 
 /* Grids */
 .wod5e .grid,
